--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,19 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Jose_vargas_Apl1_p1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Ingreso" Height="450" Width="800">
     <Grid>
 
-        <StackPanel>
-            <Menu>
-                <MenuItem Header="Registros">
-                    <MenuItem Header="" x:Name="" Click="RegistroMenuItem_Click"/>
+        <StackPanel> 
+            <Menu> 
+                <MenuItem Header="Registros" Click="RegistroMenuItem_Click">
+                    <MenuItem Header="Libros" /> <!--  -->
+                </MenuItem>
 
-                    <MenuItem Header="Consultas" >
-                    <MenuItem Header="" x:Name="" Click ="ConsultaMenuItem_Click" />  
+                <MenuItem Header="Consultas" >
+                    <MenuItem Header="Libros" Click="ConsultaMenuItem_Click"/>  <!---->
                 </MenuItem>
             </Menu>
+
         </StackPanel>
+
     </Grid>
 </Window>
-c
